--- a/wrappers/java/org/realitygrid/overview.html
+++ b/wrappers/java/org/realitygrid/overview.html
@@ -1,5 +1,5 @@
 <body>
 <p>This document gives details of the RealityGrid Java API and how it can be used.
 
-<p>Classes in the <a href="org/realitygrid/steering/package-summary.html">org.realitygrid.steering</a> provide the RealityGrid steering functionality for the aplication side and (coming soon) the steering client side.
+<p>Classes in the <a href="org/realitygrid/steering/package-summary.html">org.realitygrid.steering</a> package provide the RealityGrid steering functionality for the application side and the steering client side.
 </body>
