--- a/wrappers/java/org/realitygrid/steering/package.html
+++ b/wrappers/java/org/realitygrid/steering/package.html
@@ -1,3 +1,3 @@
 <body>
-<p>The RealityGrid API for the application side and steering client side (coming soon).
+<p>The RealityGrid API for the application side and steering client side.
 </body>
